--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,26 @@
 
     <uses-feature android:glEsVersion="0x00030001" android:required="true" />
 
+    <uses-feature android:name="android.hardware.camera" />
+
+    <!--
+        Add this permission to get access to the camera.
+    -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!--
+        Add this permission to allow opening network sockets.
+    -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--
+        Add this permission to check which network access properties (e.g.
+        active type: 3G/WiFi).
+     -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_round"
