--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,7 @@ dependencies {
 
     compile 'org.altbeacon:android-beacon-library:2.10'
 
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
     compile files("vuforia/Vuforia.jar")
 }
